--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <p>Click the button below to download my HTML file.</p>
   <a href="example.html" download class="download-button">Download HTML File</a>
   <footer>
-    <p>&copy; 2025 Your Name | Powered by GitHub Pages</p>
+    <p>&copy; 2025 Cody Swann | Powered by GitHub Pages</p>
   </footer>
 </body>
 </html>
