--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
 
     <footer>
-        <p>Onn Mini Rugged Speaker Dissection Report | Created by [Your Name]</p>
+        <p>Onn Mini Rugged Speaker Dissection Report | Created by Cody Swann </p>
     </footer>
 
     <div class="quick-links">
