--- a/example.html
+++ b/example.html
@@ -3,66 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onn Mini Rugged Speaker Dissection Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 15px 0;
-            text-align: center;
-        }
-        section {
-            padding: 20px;
-            margin: 20px 0;
-            background-color: white;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            border: 2px solid #ddd;
-            margin-bottom: 10px;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Example Dissection Report: Onn Mini Rugged Speaker</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
-        <h1>Onn Mini Rugged Speaker Dissection Example</h1>
-        <p>This is an example of how you can structure the dissection report.</p>
+        <h1>Example Dissection Report</h1>
+        <p>Dissection, analysis, and reassembly of the Onn Mini Rugged Speaker.</p>
     </header>
 
-    <section>
-        <h2>Introduction</h2>
-        <p>This is where you would introduce yourself, give some background information, and explain why you chose the Onn Mini Rugged Speaker.</p>
+    <section id="introduction">
+        <h2>1. Introduction</h2>
+        <p>This report provides detailed insights into the dissection and analysis of the Onn Mini Rugged Speaker. From breakdown to reassembly, we cover all the important components and subsystems.</p>
     </section>
 
-    <section>
-        <h2>Dissection Photo Journal</h2>
-        <img src="photo1.jpg" alt="Photo 1">
-        <p>Description of what is happening in the photo and the step in the dissection process.</p>
+    <section id="photo-journal">
+        <h2>2. Dissection Photo Journal</h2>
+        <p>Here you will find a step-by-step visual guide of the dissection process.</p>
+        <!-- Add your photos here -->
+    </section>
+
+    <section id="analysis">
+        <h2>3. Product Analysis</h2>
+        <p>Detailed analysis of key components such as:</p>
+        <ul>
+            <li>IP4056 Battery Charger Chip</li>
+            <li>LTK5302 Audio Amplifier</li>
+            <li>ATS2853 Bluetooth Chip</li>
+        </ul>
+        <p>We also estimate the cost of the resistors and other components.</p>
+    </section>
+
+    <section id="reassembly">
+        <h2>4. Reassembly</h2>
+        <p>Steps for reassembling the speaker.</p>
     </section>
 
     <footer>
-        <p>Onn Mini Rugged Speaker Dissection ES | Created by Cody Swann</p>
+        <p>Created by Cody Swann for Electronics Dissection Project - ECE 4724/6724</p>
     </footer>
-
 </body>
 </html>
