--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
         <p>In this project, I dissected the Onn Mini Rugged Speaker, which is a battery-powered Bluetooth speaker. I chose this product because it is compact, affordable, and contains both digital electronics and a Bluetooth chip.</p>
     </section>
 
-    <section id="product-market">
-        <h2>2. Product Market and Retail Information</h2>
-        <p>Product history, MSRP, and vendor details will be discussed here.</p>
-        <p><strong>Retail price:</strong> $14.99</p>
-    </section>
+<section id="product-market">
+    <h2>2. Product Market and Retail Information</h2>
+    <p><strong>Price: $10 (Walmart)</strong></p>
+    <p>The speaker is available at Walmart for $10, offering a great value for the features it provides.</p>
+    <!-- Add images or more info here -->
+</section>
+
 
     <section id="dissection-journal">
         <h2>3. Dissection Photo Journal</h2>
