--- a/example.html
+++ b/example.html
@@ -17,6 +17,13 @@
         <p>This report provides detailed insights into the dissection and analysis of the Onn Mini Rugged Speaker. From breakdown to reassembly, we cover all the important components and subsystems.</p>
     </section>
 
+    <section id="product-market">
+    <h2>2. Product Market and Retail Information</h2>
+    <p><strong>Price: $10 (Walmart)</strong></p>
+    <p>The speaker is available at Walmart for $10, offering a great value for the features it provides.</p>
+    <!-- Add images or more info here -->
+</section>
+
     <section id="photo-journal">
         <h2>2. Dissection Photo Journal</h2>
         <p>Here you will find a step-by-step visual guide of the dissection process.</p>
