--- a/example.html
+++ b/example.html
@@ -3,51 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Dissection Report: Onn Mini Rugged Speaker</title>
+    <title>Onn Mini Rugged Speaker Dissection - Example</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Example Dissection Report</h1>
-        <p>Dissection, analysis, and reassembly of the Onn Mini Rugged Speaker.</p>
+        <h1>Onn Mini Rugged Speaker Dissection - Example</h1>
+        <p>By Cody Swann</p>
     </header>
-
-    <section id="introduction">
-        <h2>1. Introduction</h2>
-        <p>This report provides detailed insights into the dissection and analysis of the Onn Mini Rugged Speaker. From breakdown to reassembly, we cover all the important components and subsystems.</p>
-    </section>
-
-    <section id="product-market">
-    <h2>2. Product Market and Retail Information</h2>
-    <p><strong>Price: $10 (Walmart)</strong></p>
-    <p>The speaker is available at Walmart for $10, offering a great value for the features it provides.</p>
-    <!-- Add images or more info here -->
-</section>
-
-    <section id="photo-journal">
-        <h2>2. Dissection Photo Journal</h2>
-        <p>Here you will find a step-by-step visual guide of the dissection process.</p>
-        <!-- Add your photos here -->
-    </section>
-
-    <section id="analysis">
-        <h2>3. Product Analysis</h2>
-        <p>Detailed analysis of key components such as:</p>
+    
+    <nav>
         <ul>
-            <li>IP4056 Battery Charger Chip</li>
-            <li>LTK5302 Audio Amplifier</li>
-            <li>ATS2853 Bluetooth Chip</li>
+            <li><a href="#overview">Overview</a></li>
+            <li><a href="#dissection">Dissection Process</a></li>
+            <li><a href="#components">Components</a></li>
+            <li><a href="#chips">Chips and Components Analysis</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#download">Download Report</a></li>
         </ul>
-        <p>We also estimate the cost of the resistors and other components.</p>
-    </section>
+    </nav>
 
-    <section id="reassembly">
-        <h2>4. Reassembly</h2>
-        <p>Steps for reassembling the speaker.</p>
-    </section>
+    <main>
+        <section id="overview">
+            <h2>Overview</h2>
+            <p>This is an example of a detailed dissection report of the Onn Mini Rugged Speaker. The objective is to showcase the components, process, and pricing involved in this project.</p>
+        </section>
+
+        <section id="dissection">
+            <h2>Dissection Process</h2>
+            <p>In this section, we describe the process of taking apart the speaker, identifying the components, and understanding the internal organization.</p>
+            <img src="images/dissection_step1.jpg" alt="Opening the speaker">
+            <img src="images/dissection_step2.jpg" alt="Removing internal components">
+        </section>
+
+        <section id="components">
+            <h2>Components</h2>
+            <ul>
+                <li>Resistors</li>
+                <li>Capacitors</li>
+                <li>Microcontroller</li>
+                <li>Speaker</li>
+            </ul>
+        </section>
+
+        <section id="chips">
+            <h2>Chips and Components Analysis</h2>
+            <h3>IP4056 - Battery Charger Chip</h3>
+            <p>The IP4056 chip is responsible for charging the internal battery efficiently, making sure the speaker stays powered.</p>
+            <h3>LTK5302 - Audio Amplifier Chip</h3>
+            <p>This chip amplifies the audio signals to drive the speaker effectively, ensuring sound quality and loudness.</p>
+            <h3>ATS2853 - Bluetooth Chip</h3>
+            <p>This Bluetooth module allows the speaker to connect wirelessly with mobile devices, providing convenience and ease of use.</p>
+        </section>
+
+        <section id="pricing">
+            <h2>Pricing</h2>
+            <p>The Onn Mini Rugged Speaker is available at Walmart for $10, making it an affordable choice for consumers.</p>
+        </section>
+
+        <section id="download">
+            <h2>Download Report</h2>
+            <a href="Onn_Mini_Rugged_Speaker_Report.zip" download class="download-button">Download Dissection Report</a>
+        </section>
+    </main>
 
     <footer>
-        <p>Created by Cody Swann for Electronics Dissection Project - ECE 4724/6724</p>
+        <p>Onn Mini Rugged Speaker Dissection Report | 2025 | By Cody Swann</p>
     </footer>
 </body>
 </html>
